--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,33 @@
+# Node.js dependencies
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 .env
+
+# Logs
+logs
+*.log
+pids
+*.pid
+*.seed
+*.pid.lock
+logs/
+
+# Editor & IDE files
+.vscode/
+.idea/
+.DS_Store
+
+# Build files
+dist/
+build/
+.cache/
+out/
+
+# React build
+frontend/node_modules/
+frontend/build/
+
+# System files
+Thumbs.db
